# face-access-control

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_CN.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: admin_config.json
data/face_data/: .gitkeep
data/models/: .gitkeep
scripts/: verify_e2e.py
src/api/: app.py
src/core/: auth.py  config.py  console_ui.py  log_manager.py  main.py  recognizer.py  user_manager.py
src/scenarios/: access_control.py  attendance.py  base.py  surveillance.py  visitor.py
tests/: test_auth.py  test_config.py  test_log_manager.py  test_recognizer.py  test_user_manager.py
